@@ -252,8 +252,10 @@ import org.wso2.ballerinalang.compiler.util.TypeDefBuilderHelper;
 import org.wso2.ballerinalang.compiler.util.TypeTags;
 import org.wso2.ballerinalang.util.Flags;
 
+import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Comparator;
+import java.util.Deque;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.IdentityHashMap;
@@ -263,9 +265,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
-import java.util.Stack;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static org.ballerinalang.model.tree.NodeKind.LITERAL;
 import static org.ballerinalang.util.BLangCompilerConstants.RETRY_MANAGER_OBJECT_SHOULD_RETRY_FUNC;
@@ -340,6 +341,9 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
 
     private void analyzeTopLevelNodes(BLangPackage pkgNode, AnalyzerData data) {
         List<TopLevelNode> topLevelNodes = pkgNode.topLevelNodes;
+
+        // topLevelNodes are modified while iterating over them
+        // noinspection ForLoopReplaceableByForEach
         for (int i = 0; i < topLevelNodes.size(); i++) {
             analyzeNode((BLangNode) topLevelNodes.get(i), data);
         }
@@ -646,12 +650,12 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
             this.dlog.error(rollbackNode.pos, DiagnosticErrorCode.ROLLBACK_CANNOT_BE_OUTSIDE_TRANSACTION_BLOCK);
             return;
         }
-        if (!data.transactionalFuncCheckStack.empty() && data.transactionalFuncCheckStack.peek()) {
+        if (!data.transactionalFuncCheckStack.isEmpty() && data.transactionalFuncCheckStack.peek()) {
             this.dlog.error(rollbackNode.pos, DiagnosticErrorCode.ROLLBACK_CANNOT_BE_WITHIN_TRANSACTIONAL_FUNCTION);
             return;
         }
         if (!data.withinTransactionScope || !data.commitRollbackAllowed ||
-                (!data.loopWithinTransactionCheckStack.empty() && data.loopWithinTransactionCheckStack.peek())) {
+                (!data.loopWithinTransactionCheckStack.isEmpty() && data.loopWithinTransactionCheckStack.peek())) {
             this.dlog.error(rollbackNode.pos, DiagnosticErrorCode.ROLLBACK_NOT_ALLOWED);
             return;
         }
@@ -875,29 +879,22 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
             return false;
         }
 
-        switch (firstPatternKind) {
-            case WILDCARD_MATCH_PATTERN:
-            case REST_MATCH_PATTERN:
-                return true;
-            case CONST_MATCH_PATTERN:
-                return checkSimilarConstMatchPattern((BLangConstPattern) firstPattern,
-                        (BLangConstPattern) secondPattern);
-            case VAR_BINDING_PATTERN_MATCH_PATTERN:
-                return checkSimilarBindingPatterns(
-                        ((BLangVarBindingPatternMatchPattern) firstPattern).getBindingPattern(),
-                        ((BLangVarBindingPatternMatchPattern) secondPattern).getBindingPattern());
-            case LIST_MATCH_PATTERN:
-                return checkSimilarListMatchPattern((BLangListMatchPattern) firstPattern,
-                        (BLangListMatchPattern) secondPattern);
-            case MAPPING_MATCH_PATTERN:
-                return checkSimilarMappingMatchPattern((BLangMappingMatchPattern) firstPattern,
-                        (BLangMappingMatchPattern) secondPattern);
-            case ERROR_MATCH_PATTERN:
-                return checkSimilarErrorMatchPattern((BLangErrorMatchPattern) firstPattern,
-                        (BLangErrorMatchPattern) secondPattern);
-            default:
-                return false;
-        }
+        return switch (firstPatternKind) {
+            case WILDCARD_MATCH_PATTERN,
+                 REST_MATCH_PATTERN -> true;
+            case CONST_MATCH_PATTERN -> checkSimilarConstMatchPattern((BLangConstPattern) firstPattern,
+                    (BLangConstPattern) secondPattern);
+            case VAR_BINDING_PATTERN_MATCH_PATTERN -> checkSimilarBindingPatterns(
+                    ((BLangVarBindingPatternMatchPattern) firstPattern).getBindingPattern(),
+                    ((BLangVarBindingPatternMatchPattern) secondPattern).getBindingPattern());
+            case LIST_MATCH_PATTERN -> checkSimilarListMatchPattern((BLangListMatchPattern) firstPattern,
+                    (BLangListMatchPattern) secondPattern);
+            case MAPPING_MATCH_PATTERN -> checkSimilarMappingMatchPattern((BLangMappingMatchPattern) firstPattern,
+                    (BLangMappingMatchPattern) secondPattern);
+            case ERROR_MATCH_PATTERN -> checkSimilarErrorMatchPattern((BLangErrorMatchPattern) firstPattern,
+                    (BLangErrorMatchPattern) secondPattern);
+            default -> false;
+        };
     }
 
     private boolean checkEmptyListOrMapMatchWithVarBindingPatternMatch(BLangMatchPattern firstPattern,
@@ -1159,23 +1156,20 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
             return false;
         }
 
-        switch (firstBindingPatternKind) {
-            case WILDCARD_BINDING_PATTERN:
-            case REST_BINDING_PATTERN:
-            case CAPTURE_BINDING_PATTERN:
-                return true;
-            case LIST_BINDING_PATTERN:
-                return checkSimilarListBindingPatterns((BLangListBindingPattern) firstBidingPattern,
-                        (BLangListBindingPattern) secondBindingPattern);
-            case MAPPING_BINDING_PATTERN:
-                return checkSimilarMappingBindingPattern((BLangMappingBindingPattern) firstBidingPattern,
-                        (BLangMappingBindingPattern) secondBindingPattern);
-            case ERROR_BINDING_PATTERN:
-                return checkSimilarErrorBindingPatterns((BLangErrorBindingPattern) firstBidingPattern,
-                        (BLangErrorBindingPattern) secondBindingPattern);
-            default:
-                return false;
-        }
+        return switch (firstBindingPatternKind) {
+            case WILDCARD_BINDING_PATTERN,
+                 REST_BINDING_PATTERN,
+                 CAPTURE_BINDING_PATTERN -> true;
+            case LIST_BINDING_PATTERN -> checkSimilarListBindingPatterns((BLangListBindingPattern) firstBidingPattern,
+                    (BLangListBindingPattern) secondBindingPattern);
+            case MAPPING_BINDING_PATTERN ->
+                    checkSimilarMappingBindingPattern((BLangMappingBindingPattern) firstBidingPattern,
+                            (BLangMappingBindingPattern) secondBindingPattern);
+            case ERROR_BINDING_PATTERN ->
+                    checkSimilarErrorBindingPatterns((BLangErrorBindingPattern) firstBidingPattern,
+                            (BLangErrorBindingPattern) secondBindingPattern);
+            default -> false;
+        };
     }
 
     private boolean checkSimilarMappingBindingPattern(BLangMappingBindingPattern firstMappingBindingPattern,
@@ -1432,27 +1426,27 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
     }
 
     private boolean isConstMatchPatternExist(BLangMatchPattern matchPattern) {
-        switch (matchPattern.getKind()) {
-            case CONST_MATCH_PATTERN:
-                return true;
-            case LIST_MATCH_PATTERN:
+        return switch (matchPattern.getKind()) {
+            case CONST_MATCH_PATTERN -> true;
+            case LIST_MATCH_PATTERN -> {
                 for (BLangMatchPattern memberMatchPattern : ((BLangListMatchPattern) matchPattern).matchPatterns) {
                     if (isConstMatchPatternExist(memberMatchPattern)) {
-                        return true;
+                        yield true;
                     }
                 }
-                return false;
-            case MAPPING_MATCH_PATTERN:
+                yield false;
+            }
+            case MAPPING_MATCH_PATTERN -> {
                 for (BLangFieldMatchPattern fieldMatchPattern :
                         ((BLangMappingMatchPattern) matchPattern).fieldMatchPatterns) {
                     if (isConstMatchPatternExist(fieldMatchPattern.matchPattern)) {
-                        return true;
+                        yield true;
                     }
                 }
-                return false;
-            default:
-                return false;
-        }
+                yield false;
+            }
+            default -> false;
+        };
     }
 
     @Override
@@ -1752,17 +1746,14 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
     }
 
     private boolean isValidContextForInferredArray(BLangNode node) {
-        switch (node.getKind()) {
-            case PACKAGE:
-            case EXPR_FUNCTION_BODY:
-            case BLOCK_FUNCTION_BODY:
-            case BLOCK:
-                return true;
-            case VARIABLE_DEF:
-                return isValidContextForInferredArray(node.parent);
-            default:
-                return false;
-        }
+        return switch (node.getKind()) {
+            case PACKAGE,
+                 EXPR_FUNCTION_BODY,
+                 BLOCK_FUNCTION_BODY,
+                 BLOCK -> true;
+            case VARIABLE_DEF -> isValidContextForInferredArray(node.parent);
+            default -> false;
+        };
     }
 
     private boolean isValidVariableForInferredArray(BLangNode node) {
@@ -1899,12 +1890,9 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
     }
 
     private List<BLangExpression> getVarRefs(BLangRecordVarRef varRef) {
-        List<BLangExpression> varRefs = varRef.recordRefFields.stream()
-                .map(e -> e.variableReference).collect(Collectors.toList());
-        if (varRef.restParam != null) {
-            varRefs.add(varRef.restParam);
-        }
-        return varRefs;
+        return Stream.concat(
+                varRef.recordRefFields.stream().map(e -> e.variableReference),
+                Stream.ofNullable(varRef.restParam)).toList();
     }
 
     private List<BLangExpression> getVarRefs(BLangErrorVarRef varRef) {
@@ -2906,14 +2894,14 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
         // 1) flush w1 -> Wait till all the asynchronous sends to worker w1 is completed
         // 2) flush -> Wait till all asynchronous sends to all workers are completed
         BLangIdentifier flushWrkIdentifier = workerFlushExpr.workerIdentifier;
-        Stack<WorkerActionSystem> workerActionSystems = data.workerActionSystemStack;
+        Deque<WorkerActionSystem> workerActionSystems = data.workerActionSystemStack;
         WorkerActionSystem currentWrkerAction = workerActionSystems.peek();
         List<BLangWorkerAsyncSendExpr> sendStmts = getAsyncSendStmtsOfWorker(currentWrkerAction);
         if (flushWrkIdentifier != null) {
             List<BLangWorkerAsyncSendExpr> sendsToGivenWrkr = sendStmts.stream()
                                                               .filter(bLangNode -> bLangNode.workerIdentifier.equals
                                                                       (flushWrkIdentifier))
-                                                              .collect(Collectors.toList());
+                                                              .toList();
             if (sendsToGivenWrkr.isEmpty()) {
                 this.dlog.error(workerFlushExpr.pos, DiagnosticErrorCode.INVALID_WORKER_FLUSH_FOR_WORKER,
                                 workerFlushExpr.workerSymbol, currentWrkerAction.currentWorkerId());
@@ -2937,7 +2925,7 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
         return actions.stream()
                       .filter(CodeAnalyzer::isWorkerSend)
                       .map(bLangNode -> (BLangWorkerAsyncSendExpr) bLangNode)
-                      .collect(Collectors.toList());
+                      .toList();
     }
     @Override
     public void visit(BLangTrapExpr trapExpr, AnalyzerData data) {
@@ -3684,8 +3672,8 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
     }
 
     private <E extends BLangExpression> void analyzeExprs(List<E> nodeList, AnalyzerData data) {
-        for (int i = 0; i < nodeList.size(); i++) {
-            analyzeExpr(nodeList.get(i), data);
+        for (E e : nodeList) {
+            analyzeExpr(e, data);
         }
     }
 
@@ -3850,8 +3838,7 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
             Set<String> waitingOnWorkerSet = new HashSet<>();
             for (BLangNode action : worker.actions) {
                 if (isWaitAction(action)) {
-                    if (action instanceof BLangWaitForAllExpr) {
-                        BLangWaitForAllExpr waitForAllExpr = (BLangWaitForAllExpr) action;
+                    if (action instanceof BLangWaitForAllExpr waitForAllExpr) {
                         for (BLangWaitForAllExpr.BLangWaitKeyValue keyValuePair : waitForAllExpr.keyValuePairs) {
                             BSymbol workerSymbol = getWorkerSymbol(keyValuePair);
                             if (workerSymbol != null) {
@@ -3891,9 +3878,8 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
 
     private void handleWaitAction(WorkerActionSystem workerActionSystem, BLangNode currentAction,
                                   WorkerActionStateMachine worker, AnalyzerData data) {
-        if (currentAction instanceof BLangWaitForAllExpr) {
+        if (currentAction instanceof BLangWaitForAllExpr waitForAllExpr) {
             boolean allWorkersAreDone = true;
-            BLangWaitForAllExpr waitForAllExpr = (BLangWaitForAllExpr) currentAction;
             for (BLangWaitForAllExpr.BLangWaitKeyValue keyValuePair : waitForAllExpr.keyValuePairs) {
                 BSymbol workerSymbol = getWorkerSymbol(keyValuePair);
                 if (isWorkerSymbol(workerSymbol)) {
@@ -4171,7 +4157,7 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
 
         public final List<BLangAlternateWorkerReceive> alternateWorkerReceives = new ArrayList<>();
         public List<WorkerActionStateMachine> finshedWorkers = new ArrayList<>();
-        private Stack<WorkerActionStateMachine> workerActionStateMachines = new Stack<>();
+        private Deque<WorkerActionStateMachine> workerActionStateMachines = new ArrayDeque<>();
         private Map<BLangNode, SymbolEnv> workerInteractionEnvironments = new IdentityHashMap<>();
         private Map<String, Integer> workerEventIndexMap = new HashMap<>();
         private boolean hasErrors = false;
@@ -4426,7 +4412,7 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
         // Fields related to worker system
         boolean inInternallyDefinedBlockStmt;
         int workerSystemMovementSequence;
-        Stack<WorkerActionSystem> workerActionSystemStack = new Stack<>();
+        Deque<WorkerActionSystem> workerActionSystemStack = new ArrayDeque<>();
         Map<BSymbol, Set<BLangNode>> workerReferences = new HashMap<>();
         // Field related to transactions
         int transactionCount;
@@ -4436,9 +4422,9 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
         boolean commitRollbackAllowed;
         int commitCountWithinBlock;
         int rollbackCountWithinBlock;
-        Stack<Boolean> loopWithinTransactionCheckStack = new Stack<>();
-        Stack<Boolean> returnWithinTransactionCheckStack = new Stack<>();
-        Stack<Boolean> transactionalFuncCheckStack = new Stack<>();
+        Deque<Boolean> loopWithinTransactionCheckStack = new ArrayDeque<>();
+        Deque<Boolean> returnWithinTransactionCheckStack = new ArrayDeque<>();
+        Deque<Boolean> transactionalFuncCheckStack = new ArrayDeque<>();
         // Fields related to lock
         boolean withinLockBlock;
         // Common fields
@@ -4447,7 +4433,7 @@ public class CodeAnalyzer extends SimpleBLangNodeAnalyzer<CodeAnalyzer.AnalyzerD
         boolean queryToTableWithKey;
         boolean withinQuery;
         Types.QueryConstructType queryConstructType;
-        Stack<LinkedHashSet<BType>> returnTypes = new Stack<>();
+        Deque<LinkedHashSet<BType>> returnTypes = new ArrayDeque<>();
         DefaultValueState defaultValueState = DefaultValueState.NOT_IN_DEFAULT_VALUE;
     }
 }
