@@ -26,7 +26,6 @@ import io.ballerina.compiler.internal.syntax.NodeListUtils;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * A factory for creating nodes in the syntax tree.
@@ -159,7 +158,7 @@ public abstract class AbstractNodeFactory {
                 minutiaeNodes.stream()
                         .map(minutiae -> Objects.requireNonNull(minutiae, "minutiae should not be null"))
                         .map(Minutiae::internalNode)
-                        .collect(Collectors.toList())), 0);
+                        .toList()), 0);
     }
 
     public static Minutiae createCommentMinutiae(String text) {
@@ -204,7 +203,7 @@ public abstract class AbstractNodeFactory {
                 nodes.stream()
                         .map(node -> Objects.requireNonNull(node, "node should not be null"))
                         .map(Node::internalNode)
-                        .collect(Collectors.toList())).createUnlinkedFacade());
+                        .toList()).createUnlinkedFacade());
     }
 
     public static <T extends Node> SeparatedNodeList<T> createSeparatedNodeList(Node... nodes) {
@@ -217,12 +216,12 @@ public abstract class AbstractNodeFactory {
         return new SeparatedNodeList<>(STNodeFactory.createNodeList(internalNodes).createUnlinkedFacade());
     }
 
-    public static <T extends Node> SeparatedNodeList<T> createSeparatedNodeList(Collection<Node> nodes) {
+    public static <T extends Node> SeparatedNodeList<T> createSeparatedNodeList(Collection<? extends Node> nodes) {
         return new SeparatedNodeList<>(STNodeFactory.createNodeList(
                 nodes.stream()
                         .map(node -> Objects.requireNonNull(node, "node should not be null"))
                         .map(Node::internalNode)
-                        .collect(Collectors.toList())).createUnlinkedFacade());
+                        .toList()).createUnlinkedFacade());
     }
 
     protected static STNode getOptionalSTNode(Node node) {
