@@ -61,7 +61,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Class to test annotation attachments.
@@ -459,7 +458,7 @@ public class AnnotationAttachmentTest {
                         .get().getAnnotationAttachments()
                         .stream()
                         .filter(ann -> !isServiceIntropAnnot((BLangAnnotationAttachment) ann))
-                        .collect(Collectors.toList());
+                        .toList();
         validateEmptyMapConstructorExprInAnnot(attachments, "v20", "A", 1);
     }
 
@@ -527,10 +526,10 @@ public class AnnotationAttachmentTest {
 
    private BType getConstrainedTypeFromRef(BType type) {
        BType constraint = type;
-       if (type.tag == org.wso2.ballerinalang.compiler.util.TypeTags.TYPEREFDESC) {
+       if (type.tag == TypeTags.TYPEREFDESC) {
            constraint = ((BTypeReferenceType) type).referredType;
        }
-       return constraint.tag == org.wso2.ballerinalang.compiler.util.TypeTags.TYPEREFDESC ?
+       return constraint.tag == TypeTags.TYPEREFDESC ?
                getConstrainedTypeFromRef(constraint) : constraint;
    }
 
@@ -628,7 +627,7 @@ public class AnnotationAttachmentTest {
                 getServiceClassForServiceDecl(name).getAnnotationAttachments()
                         .stream()
                         .filter(ann -> !isServiceIntropAnnot((BLangAnnotationAttachment) ann))
-                        .collect(Collectors.toList());
+                        .toList();
     }
 
     private ClassDefinition getServiceClassForServiceDecl(String name) {
